add: template HTML

--- a/components/playlist-card/index.html
+++ b/components/playlist-card/index.html
@@ -7,6 +7,252 @@
     <link href="index.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    
+    <header>
+        <img src="" alt="">
+        <div class="header-title">
+            <h3>Playlist</h3>
+            <h1>Peaceful Piano</h1>
+        </div>
+        <div class="paragraph-1">
+            Peaceful piano to help you slow down, breathe, and relax.
+        </div>
+        <div class="paragraph-2">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="50px" height="50px">
+                <path
+                    d="M25.009,1.982C12.322,1.982,2,12.304,2,24.991S12.322,48,25.009,48s23.009-10.321,23.009-23.009S37.696,1.982,25.009,1.982z M34.748,35.333c-0.289,0.434-0.765,0.668-1.25,0.668c-0.286,0-0.575-0.081-0.831-0.252C30.194,34.1,26,33,22.5,33.001 c-3.714,0.002-6.498,0.914-6.526,0.923c-0.784,0.266-1.635-0.162-1.897-0.948s0.163-1.636,0.949-1.897 c0.132-0.044,3.279-1.075,7.474-1.077C26,30,30.868,30.944,34.332,33.253C35.022,33.713,35.208,34.644,34.748,35.333z M37.74,29.193 c-0.325,0.522-0.886,0.809-1.459,0.809c-0.31,0-0.624-0.083-0.906-0.26c-4.484-2.794-9.092-3.385-13.062-3.35 c-4.482,0.04-8.066,0.895-8.127,0.913c-0.907,0.258-1.861-0.272-2.12-1.183c-0.259-0.913,0.272-1.862,1.184-2.12 c0.277-0.079,3.854-0.959,8.751-1c4.465-0.037,10.029,0.61,15.191,3.826C37.995,27.328,38.242,28.388,37.74,29.193z M40.725,22.013 C40.352,22.647,39.684,23,38.998,23c-0.344,0-0.692-0.089-1.011-0.275c-5.226-3.068-11.58-3.719-15.99-3.725 c-0.021,0-0.042,0-0.063,0c-5.333,0-9.44,0.938-9.481,0.948c-1.078,0.247-2.151-0.419-2.401-1.495 c-0.25-1.075,0.417-2.149,1.492-2.4C11.729,16.01,16.117,15,21.934,15c0.023,0,0.046,0,0.069,0 c4.905,0.007,12.011,0.753,18.01,4.275C40.965,19.835,41.284,21.061,40.725,22.013z" />
+            </svg>
+            <p>Spotify . 7,144,766 . 305 songs, about 12 hr</p>
+        </div>
+    </header>
+    <main>
+        <div id="button-head">
+            <button value="player" disabled><svg fill="#000000" width="800px" height="800px" viewBox="-60 0 512 512" xmlns="http://www.w3.org/2000/svg">
+                <title>play</title>
+                <path d="M64 96L328 256 64 416 64 96Z" />
+            </svg></button>
+            <button value="like" disabled><svg width="800px" height="800px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="#000000">
+                <path
+                    d="M14.88 4.78a3.489 3.489 0 0 0-.37-.9 3.24 3.24 0 0 0-.6-.79 3.78 3.78 0 0 0-1.21-.81 3.74 3.74 0 0 0-2.84 0 4 4 0 0 0-1.16.75l-.05.06-.65.65-.65-.65-.05-.06a4 4 0 0 0-1.16-.75 3.74 3.74 0 0 0-2.84 0 3.78 3.78 0 0 0-1.21.81 3.55 3.55 0 0 0-.97 1.69 3.75 3.75 0 0 0-.12 1c0 .317.04.633.12.94a4 4 0 0 0 .36.89 3.8 3.8 0 0 0 .61.79L8 14.31l5.91-5.91c.237-.233.44-.5.6-.79A3.578 3.578 0 0 0 15 5.78a3.747 3.747 0 0 0-.12-1zm-1 1.63a2.69 2.69 0 0 1-.69 1.21l-5.21 5.2-5.21-5.2a2.9 2.9 0 0 1-.44-.57 3 3 0 0 1-.27-.65 3.25 3.25 0 0 1-.08-.69A3.36 3.36 0 0 1 2.06 5a2.8 2.8 0 0 1 .27-.65c.12-.21.268-.4.44-.57a2.91 2.91 0 0 1 .89-.6 2.8 2.8 0 0 1 2.08 0c.33.137.628.338.88.59l1.36 1.37 1.36-1.37a2.72 2.72 0 0 1 .88-.59 2.8 2.8 0 0 1 2.08 0c.331.143.633.347.89.6.174.165.32.357.43.57a2.69 2.69 0 0 1 .35 1.34 2.6 2.6 0 0 1-.06.72h-.03z" />
+            </svg></button>
+            <button value="other" disabled><svg fill="#000000" xmlns="http://www.w3.org/2000/svg" width="800px" height="800px" viewBox="0 0 52 52"
+                enable-background="new 0 0 52 52" xml:space="preserve">
+                <path d="M8,20c3.3,0,6,2.7,6,6s-2.7,6-6,6s-6-2.7-6-6S4.7,20,8,20z M26,20c3.3,0,6,2.7,6,6s-2.7,6-6,6s-6-2.7-6-6
+            	S22.7,20,26,20z M44,20c3.3,0,6,2.7,6,6s-2.7,6-6,6s-6-2.7-6-6S40.7,20,44,20z" />
+            </svg></button>
+        </div>
+        <table class="table-menú">
+            <th>
+                <td>#</td>
+                <td>Title</td>
+                <td>Album</td>
+                <td>Date added</td>
+                <td><svg fill="#000000" width="800px" height="800px" viewBox="-2 -2 24 24" xmlns="http://www.w3.org/2000/svg"
+                    preserveAspectRatio="xMinYMin" class="jam jam-clock">
+                    <path
+                        d='M11 9h4a1 1 0 0 1 0 2h-5a1 1 0 0 1-1-1V4a1 1 0 1 1 2 0v5zm-1 11C4.477 20 0 15.523 0 10S4.477 0 10 0s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16z' />
+                </svg></td>
+            </th>
+            <tr class="row-1">
+                <td>1</td>
+                <td><img src="" alt="">
+                    <p>Glance Out A Casement Wind...</p>
+                    <p>Janet Redger</p>
+                </td>
+                <td>Glance Out A Casement Wind...</td>
+                <td>2 Days ago</td>
+                <td>2:10</td>
+            </tr>
+            <tr class="row-2">
+                <td>2</td>
+                <td><img src="" alt="">
+                    <p>This Tender Appeal</p>
+                    <p>Allysium</p>
+                </td>
+                <td>This Tender Appeal</td>
+                <td>2 Days ago</td>
+                <td>2:48</td>
+            </tr>
+            <tr class="row-3">
+                <td>3</td>
+                <td><img src="" alt="">
+                    <p>Lyrides</p>
+                    <p>Jozef De Schutter</p>
+                </td>
+                <td>Lyrides</td>
+                <td>2 Days ago</td>
+                <td>2:43</td>
+            </tr>
+            <tr class="row-4">
+                <td>4</td>
+                <td><img src="" alt="">
+                    <p>Calm Wind</p>
+                    <p>Elfrieda</p>
+                </td>
+                <td>Calm Wind</td>
+                <td>2 Days ago</td>
+                <td>2:20</td>
+            </tr>
+            <tr class="row-5">
+                <td>5</td>
+                <td><img src="" alt="">
+                    <p>A tail to tell</p>
+                    <p>Luiza Schmidt</p>
+                </td>
+                <td>A tail to tell</td>
+                <td>2 Days ago</td>
+                <td>2:10</td>
+            </tr>
+            <tr class="row-6">
+                <td>6</td>
+                <td><img src="" alt="">
+                    <p>A Time Long Ago</p>
+                    <p>Polly Carter</p>
+                </td>
+                <td>A Time Long Ago</td>
+                <td>2 Days ago</td>
+                <td>2:15</td>
+            </tr>
+            <tr class="row-7">
+                <td>7</td>
+                <td><img src="" alt="">
+                    <p>Waiting</p>
+                    <p>Felix Tanguy</p>
+                </td>
+                <td>Waiting</td>
+                <td>2 Days ago</td>
+                <td>2:19</td>
+            </tr>
+            <tr class="row-8">
+                <td>8</td>
+                <td><img src="" alt="">
+                    <p>Forevermore</p>
+                    <p>Ambrosiae</p>
+                </td>
+                <td>Forevermore</td>
+                <td>2 Days ago</td>
+                <td>2:34</td>
+            </tr>
+            <tr class="row-9">
+                <td>9</td>
+                <td><img src="" alt="">
+                    <p>Evening Star</p>
+                    <p>Ron Adelaar</p>
+                </td>
+                <td>Evening Star</td>
+                <td>2 Days ago</td>
+                <td>2:34</td>
+            </tr>
+            <tr class="row-10">
+                <td>10</td>
+                <td><img src="" alt="">
+                    <p>Kastepiisk</p>
+                    <p>Jan Thiel</p>
+                </td>
+                <td>Kastepiisk</td>
+                <td>2 Days ago</td>
+                <td>3:21</td>
+            </tr>
+            <tr class="row-11">
+                <td>11</td>
+                <td><img src="" alt="">
+                    <p>Saying Things</p>
+                    <p>Emanuel Fremont</p>
+                </td>
+                <td>Saying Things</td>
+                <td>2 Days ago</td>
+                <td>2:03</td>
+            </tr>
+            <tr class="row-12">
+                <td>12</td>
+                <td><img src="" alt="">
+                    <p>Stille sjø</p>
+                    <p>Ole'Bjørn Talstad</p>
+                </td>
+                <td>Stille sjø</td>
+                <td>2 Days ago</td>
+                <td>2:31</td>
+            </tr>
+            <tr class="row-13">
+                <td>13</td>
+                <td><img src="" alt="">
+                    <p>Tranquillity waltz</p>
+                    <p>Thomas Perceval</p>
+                </td>
+                <td>Tranquillity waltz</td>
+                <td>2 Days ago</td>
+                <td>1:58</td>
+            </tr>
+            <tr class="row-14">
+                <td>14</td>
+                <td><img src="" alt="">
+                    <p>Calm Wind</p>
+                    <p>Elfrieda</p>
+                </td>
+                <td>Calm Wind</td>
+                <td>2 Days ago</td>
+                <td>2:20</td>
+            </tr>
+            <tr class="row-15">
+                <td>15</td>
+                <td><img src="" alt="">
+                    <p>Calm Wind</p>
+                    <p>Elfrieda</p>
+                </td>
+                <td>Calm Wind</td>
+                <td>2 Days ago</td>
+                <td>2:20</td>
+            </tr>
+            <tr class="row-16">
+                <td>16</td>
+                <td><img src="" alt="">
+                    <p>Calm Wind</p>
+                    <p>Elfrieda</p>
+                </td>
+                <td>Calm Wind</td>
+                <td>2 Days ago</td>
+                <td>2:20</td>
+            </tr>
+            <tr class="row-17">
+                <td>17</td>
+                <td><img src="" alt="">
+                    <p>Calm Wind</p>
+                    <p>Elfrieda</p>
+                </td>
+                <td>Calm Wind</td>
+                <td>2 Days ago</td>
+                <td>2:20</td>
+            </tr>
+            <tr class="row-18">
+                <td>18</td>
+                <td><img src="" alt="">
+                    <p>Calm Wind</p>
+                    <p>Elfrieda</p>
+                </td>
+                <td>Calm Wind</td>
+                <td>2 Days ago</td>
+                <td>2:20</td>
+            </tr>
+            <tr class="row-19">
+                <td>19</td>
+                <td><img src="" alt="">
+                    <p>Calm Wind</p>
+                    <p>Elfrieda</p>
+                </td>
+                <td>Calm Wind</td>
+                <td>2 Days ago</td>
+                <td>2:20</td>
+            </tr>
+            <tr class="row-20">
+                <td>20</td>
+                <td><img src="" alt="">
+                    <p>Calm Wind</p>
+                    <p>Elfrieda</p>
+                </td>
+                <td>Calm Wind</td>
+                <td>2 Days ago</td>
+                <td>2:20</td>
+            </tr>
+        </table>
+    </main>
 </body>
 </html>
