--- a/components/homepage-card/index.html
+++ b/components/homepage-card/index.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+
+<body>
+    <div class="cardHomePage">
+        <div class="upperSectionCard">
+            <div class="cardConteiner">
+                <div class="onlyPadding">
+                    <div class="onlyWidth">
+                        <img class="imgModule" src="img_campione.jpg" alt="Immagine di prova">
+                    </div>
+                </div>
+                <div class="bottomConteiner">
+                    <div class="titleCardConteiner">
+                        <div class="TCC2">
+                            <p>Starboy</p>
+                        </div>
+                        <div class="descriptionCard">
+                            <p>Album . The Weeknd</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="usingForMarging">
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
