--- a/components/side-navbar/index.html
+++ b/components/side-navbar/index.html
@@ -1,1 +1,60 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <title>Document</title>
+  </head>
+  <body>
+    <nav class="side-navbar">
+      <div class="header">
+        <ul>
+          <li><i class="fa-solid fa-house"></i> Home</li>
+          <li><i class="fa-solid fa-magnifying-glass"></i>Search</li>
+        </ul>
+      </div>
+      <div class="content">
+        <div class="side-header">
+          <div class="library">Your Library</div>
+          <div class="functions">
+            <div class="group">
+              <p class="p1">Create your first playlist</p>
+              <p class="p2">It's easy, we'll help you</p>
+              <button class="button">Create Playlist</button>
+            </div>
+            <div class="group">
+              <p class="p1">Let's find some podcast to follow.</p>
+              <p class="p2">We'll keep you updated on new episodes</p>
 
+              <button class="button">Browse podcasts</button>
+            </div>
+          </div>
+        </div>
+        <div class="side-footer">
+          <div class="footer-elements">
+            <div class="links">
+              <div>Legal</div>
+              <div>Private Center</div>
+              <div>Privacy policy</div>
+              <div>Cookie settings</div>
+              <div>About ads</div>
+              <div>Accessibility</div>
+              <div>Cookies</div>
+            </div>
+          </div>
+          <div class="language">
+            <button class="button2">Italiano</button>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </body>
+</html>
