--- a/components/search-card/index.html
+++ b/components/search-card/index.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="header">
+      <div class="header-content">
+        <button>destra</button>
+        <button>sinistra</button>
+        <input type="search" name="" id="" />
+      </div>
+      <div class="header-account">
+        <button class="button">Iscriviti</button>
+        <button class="button">Accedi</button>
+      </div>
+    </div>
+    <div class="searcCard">
+      <div class="sfoglia">Playlist spotify</div>
+      <div class="cards"></div>
+    </div>
+  </body>
+</html>
