--- a/components/side-navbar/index.css
+++ b/components/side-navbar/index.css
@@ -4,14 +4,22 @@
   box-sizing: border-box;
 }
 body {
-  font-family: CircularSp, CircularSp-Arab, CircularSp-Hebr, CircularSp-Cyrl,
-    CircularSp-Grek, CircularSp-Deva;
+  font-family: var(
+    --font-family,
+    CircularSp,
+    CircularSp-Arab,
+    CircularSp-Hebr,
+    CircularSp-Cyrl,
+    CircularSp-Grek,
+    CircularSp-Deva,
+    var(--fallback-fonts, sans-serif)
+  );
+
   font-size: 16px;
-  font-weight: 900;
   display: flex;
   flex-direction: column;
   padding: 8px;
-  width: 300px;
+  width: 360px;
   height: 100vh;
   background-color: black;
 }
@@ -25,6 +33,8 @@ body {
 
 .header,
 .content {
+  font-size: 1rem;
+  font-weight: 700;
   border-radius: 8px;
   background-color: #121212;
 }
@@ -64,55 +74,78 @@ li:hover {
   display: flex;
   flex-direction: column;
   color: #a7a7a7;
-  padding: 8px;
-  padding-left: 16px;
-  padding-right: 16px;
+  padding-inline: 8px;
+  padding-bottom: 8px;
 }
 
 .library {
+  color: #a7a7a7;
+  padding: 8px;
+  padding-inline: 16px;
+}
+.library-content {
   display: flex;
   align-items: center;
   height: 40px;
+  gap: 14px;
+  height: 40px;
+}
+.library:hover {
+  color: white;
+}
+.library > .svg-lib:hover {
+  fill: white;
+}
+
+.svg-lib2 {
+  align-items: center;
+  margin-left: auto;
 }
 .functions {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 16px;
 }
 .group {
   color: white;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  row-gap: 20px;
   background-color: #242424;
   padding: 16px;
   padding-left: 20px;
   padding-right: 20px;
   border-radius: 8px;
+  margin-block: 8px;
+}
+.group-p {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
 .p1 {
+  margin-top: 4px;
   font-weight: 700;
 }
 .p2 {
+  font-size: 13px;
   font-weight: 400;
 }
 .button {
   border: 0px;
-  font-weight: 700;
   border-radius: 500px;
   background-color: #fff;
   min-block-size: 32px;
   padding-block: 4px;
   padding-inline: 16px;
   align-self: self-start;
+  font-weight: 700;
 }
 
 .side-footer {
   display: flex;
   flex-direction: column;
   margin-top: auto;
-  margin-bottom: 32px;
-  padding-inline: 24px;
 }
 .footer-elements {
   font-size: 10px;
@@ -130,10 +163,14 @@ li:hover {
 .links div {
   margin-right: 16px;
   height: 32px;
+  display: flex;
+  align-items: center;
 }
-
+.language {
+  margin-bottom: 32px;
+  padding-inline: 24px;
+}
 .button2 {
-  font-weight: 700;
   border-radius: 500px;
   color: white;
   background-color: transparent;
