--- a/components/side-navbar/index.html
+++ b/components/side-navbar/index.html
@@ -22,18 +22,36 @@
         </ul>
       </div>
       <div class="content">
+        <div class="library">
+          <div class="library-content">
+            <svg class="svg-lib" height="20px" width="20px" fill="#a7a7a7">
+              <path
+                d="M 3 22 a 1 1 0 0 1 -1 -1 V 3 a 1 1 0 0 1 2 0 v 18 a 1 1 0 0 1 -1 1 Z M 15.5 2.134 A 1 1 0 0 0 14 3 v 18 a 1 1 0 0 0 1 1 h 6 a 1 1 0 0 0 1 -1 V 6.464 a 1 1 0 0 0 -0.5 -0.866 l -6 -3.464 Z M 9 2 a 1 1 0 0 0 -1 1 v 18 a 1 1 0 1 0 2 0 V 3 a 1 1 0 0 0 -1 -1 Z"
+              ></path>
+            </svg>
+            Your Library
+
+            <svg class="svg-lib2" height="20px" width="20px" fill="#a7a7a7">
+              <path
+                d="M 15.25 8 a 0.75 0.75 0 0 1 -0.75 0.75 H 8.75 v 5.75 a 0.75 0.75 0 0 1 -1.5 0 V 8.75 H 1.5 a 0.75 0.75 0 0 1 0 -1.5 h 5.75 V 1.5 a 0.75 0.75 0 0 1 1.5 0 v 5.75 h 5.75 a 0.75 0.75 0 0 1 0.75 0.75 Z"
+              ></path>
+            </svg>
+          </div>
+        </div>
         <div class="side-header">
-          <div class="library">Your Library</div>
           <div class="functions">
             <div class="group">
-              <p class="p1">Create your first playlist</p>
-              <p class="p2">It's easy, we'll help you</p>
+              <div class="group-p">
+                <p class="p1">Create your first playlist</p>
+                <p class="p2">It's easy, we'll help you</p>
+              </div>
               <button class="button">Create Playlist</button>
             </div>
             <div class="group">
-              <p class="p1">Let's find some podcast to follow.</p>
-              <p class="p2">We'll keep you updated on new episodes</p>
-
+              <div class="group-p">
+                <p class="p1">Let's find some podcast to follow.</p>
+                <p class="p2">We'll keep you updated on new episodes</p>
+              </div>
               <button class="button">Browse podcasts</button>
             </div>
           </div>
