Build1: Upload sketch search-card, da rivedere

--- a/components/search-card/index.html
+++ b/components/search-card/index.html
@@ -7,20 +7,141 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="header">
-      <div class="header-content">
+    <div class="body-search">
+      <div class="header">
         <button>destra</button>
         <button>sinistra</button>
         <input type="search" name="" id="" />
-      </div>
-      <div class="header-account">
         <button class="button">Iscriviti</button>
         <button class="button">Accedi</button>
       </div>
-    </div>
-    <div class="searcCard">
-      <div class="sfoglia">Playlist spotify</div>
-      <div class="cards"></div>
+      <div class="search-card">
+        <div class="content">
+          <div class="sfoglia">Sfoglia tutto</div>
+          <div class="cards-space">
+            <div class="card">
+              <div class="title">Podcast</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/567158eb895ad26718a814345af0fc43ee785ec5"
+                alt="alt"
+              />
+            </div>
+            <div class="card">
+              <div class="title">Podcast</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/567158eb895ad26718a814345af0fc43ee785ec5"
+                alt="alt"
+              />
+            </div>
+            <div class="card">
+              <div class="title">Podcast</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/567158eb895ad26718a814345af0fc43ee785ec5"
+                alt="alt"
+              />
+            </div>
+            <div class="card">
+              <div class="title">Podcast</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/567158eb895ad26718a814345af0fc43ee785ec5"
+                alt="alt"
+              />
+            </div>
+            <div class="card">
+              <div class="title">Podcast</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/567158eb895ad26718a814345af0fc43ee785ec5"
+                alt="alt"
+              />
+            </div>
+            <div class="card">
+              <div class="title">Podcast</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/567158eb895ad26718a814345af0fc43ee785ec5"
+                alt="alt"
+              />
+            </div>
+            <div class="card">
+              <div class="title">Podcast</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/567158eb895ad26718a814345af0fc43ee785ec5"
+                alt="alt"
+              />
+            </div>
+            <div class="card">
+              <div class="title">Podcast</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/567158eb895ad26718a814345af0fc43ee785ec5"
+                alt="alt"
+              />
+            </div>
+            <div class="card">
+              <div class="title">Podcast</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/567158eb895ad26718a814345af0fc43ee785ec5"
+                alt="alt"
+              />
+            </div>
+            <div class="card">
+              <div class="title">Podcast</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/567158eb895ad26718a814345af0fc43ee785ec5"
+                alt="alt"
+              />
+            </div>
+            <div class="card">
+              <div class="title">Podcast</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/567158eb895ad26718a814345af0fc43ee785ec5"
+                alt="alt"
+              />
+            </div>
+            <div class="card">
+              <div class="title">Podcast</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/567158eb895ad26718a814345af0fc43ee785ec5"
+                alt="alt"
+              />
+            </div>
+            <div class="card">
+              <div class="title">Podcast</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/567158eb895ad26718a814345af0fc43ee785ec5"
+                alt="alt"
+              />
+            </div>
+            <div class="card">
+              <div class="title">Podcast</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/567158eb895ad26718a814345af0fc43ee785ec5"
+                alt="alt"
+              />
+            </div>
+            <div class="card">
+              <div class="title">Podcast</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/567158eb895ad26718a814345af0fc43ee785ec5"
+                alt="alt"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
