--- a/components/playlist-card/index.html
+++ b/components/playlist-card/index.html
@@ -7,7 +7,7 @@
     <link href="index.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <section>
+    <section id="playlist-page">
         <header class="right-sidebar">
             <img src="https://i.scdn.co/image/ab67706f00000002d073e656e546e43bc387ad79" alt="Peaceful-piano">
             <div class="title-paragraph">
