--- a/components/playlist-card/index.html
+++ b/components/playlist-card/index.html
@@ -61,17 +61,19 @@
                         <th>Title</th>
                         <th>Album</th>
                         <th>Date added</th>
-                        <th><svg fill="#000000" width="16" height="16" viewBox="-2 -2 24 24" xmlns="http://www.w3.org/2000/svg"
+                        <th class="like">Like</th>
+                        <th class="clock"><svg fill="#ffffff" width="16" height="16" viewBox="-2 -2 24 24" xmlns="http://www.w3.org/2000/svg"
                             preserveAspectRatio="xMinYMin" class="jam jam-clock">
                             <path
                                 d='M11 9h4a1 1 0 0 1 0 2h-5a1 1 0 0 1-1-1V4a1 1 0 1 1 2 0v5zm-1 11C4.477 20 0 15.523 0 10S4.477 0 10 0s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16z' />
                         </svg></th>
+                        <th class="dots">Three dots</th>
                     </tr>
                     <tr class="table-row">
                         <td class="numbers">
                             <div class="number">1</div>
                             <!-- <div class="svg-hover">
-                                <svg fill="#000000" width="20px" height="20px" style="color: black" viewBox="-60 0 512 512" xmlns="http://www.w3.org/2000/svg">
+                                <svg fill="#ffffff" width="20px" height="20px" style="color: black" viewBox="-60 0 512 512" xmlns="http://www.w3.org/2000/svg">
                                     <title>play</title>
                                     <path d="M64 96L328 256 64 416 64 96Z" />
                                 </svg>
@@ -86,7 +88,19 @@
                         </td>
                         <td class="album">Glance Out A Casement Wind...</td>
                         <td>2 Days ago</td>
-                        <td>2:10</td>
+                        <td class="svg-hover-play"><svg width="16" height="16" viewBox="0 0 16 16"
+                                xmlns="http://www.w3.org/2000/svg" fill="#ffffff">
+                                <path
+                                    d="M14.88 4.78a3.489 3.489 0 0 0-.37-.9 3.24 3.24 0 0 0-.6-.79 3.78 3.78 0 0 0-1.21-.81 3.74 3.74 0 0 0-2.84 0 4 4 0 0 0-1.16.75l-.05.06-.65.65-.65-.65-.05-.06a4 4 0 0 0-1.16-.75 3.74 3.74 0 0 0-2.84 0 3.78 3.78 0 0 0-1.21.81 3.55 3.55 0 0 0-.97 1.69 3.75 3.75 0 0 0-.12 1c0 .317.04.633.12.94a4 4 0 0 0 .36.89 3.8 3.8 0 0 0 .61.79L8 14.31l5.91-5.91c.237-.233.44-.5.6-.79A3.578 3.578 0 0 0 15 5.78a3.747 3.747 0 0 0-.12-1zm-1 1.63a2.69 2.69 0 0 1-.69 1.21l-5.21 5.2-5.21-5.2a2.9 2.9 0 0 1-.44-.57 3 3 0 0 1-.27-.65 3.25 3.25 0 0 1-.08-.69A3.36 3.36 0 0 1 2.06 5a2.8 2.8 0 0 1 .27-.65c.12-.21.268-.4.44-.57a2.91 2.91 0 0 1 .89-.6 2.8 2.8 0 0 1 2.08 0c.33.137.628.338.88.59l1.36 1.37 1.36-1.37a2.72 2.72 0 0 1 .88-.59 2.8 2.8 0 0 1 2.08 0c.331.143.633.347.89.6.174.165.32.357.43.57a2.69 2.69 0 0 1 .35 1.34 2.6 2.6 0 0 1-.06.72h-.03z" />
+                            </svg>
+                        </td>
+                        <td class="time-reproduce">2:10</td>
+                        <td class="svg-hover-play"><svg fill="#ffffff" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 52 52"
+                            enable-background="new 0 0 52 52" xml:space="preserve">
+                                <path d="M8,20c3.3,0,6,2.7,6,6s-2.7,6-6,6s-6-2.7-6-6S4.7,20,8,20z M26,20c3.3,0,6,2.7,6,6s-2.7,6-6,6s-6-2.7-6-6
+                                                S22.7,20,26,20z M44,20c3.3,0,6,2.7,6,6s-2.7,6-6,6s-6-2.7-6-6S40.7,20,44,20z" />
+                            </svg>
+                        </td>
                     </tr>
                     <tr class="row-2">
                         <td class="numbers">2</td>
