--- a/components/homepage-card/homepageCard.html
+++ b/components/homepage-card/homepageCard.html
@@ -5,16 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="homepageCard.css">
 </head>
 
 <body>
     <div class="cardHomePage">
+        <a href="../playlist-card/index.html"></a>
         <div class="upperSectionCard">
             <div class="cardConteiner">
                 <div class="onlyPadding">
                     <div class="onlyWidth">
                         <img class="imgModule" src="img_campione.jpg" alt="Immagine di prova">
+                        <button class="playHomePageCard"><svg role="img" height="24" width="24" aria-hidden="true" viewBox="0 0 24 24" data-encore-id="icon" class="Svg-sc-ytk21e-0 haNxPq"><path d="m7.05 3.606 13.49 7.788a.7.7 0 0 1 0 1.212L7.05 20.394A.7.7 0 0 1 6 19.788V4.212a.7.7 0 0 1 1.05-.606z"></path></svg>
+                            <a href="../playlist-card/index.html"></a>
+                        </button>
                     </div>
                 </div>
                 <div class="bottomConteiner">
