feat: I've completed the cookie message

--- a/components/cookie-message/index.html
+++ b/components/cookie-message/index.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cookie message</title>
+    <link href="index.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+    <section class="cookie-view">
+        <article class="cookie-message">
+            <div class="text">
+                <div>anteprima di spotify</div>
+                <div>Iscriviti per ricevere brani e podcast illimitati con annunci pubblicitari occasionali. 
+                    Non è necessaria alcuna carta di credito.</div>
+            </div>
+        </article>
+        <button class="submit">Iscriviti gratis</button>
+    </section>
+</body>
+</html>
