--- a/components/homepage-card/homepageCard.css
+++ b/components/homepage-card/homepageCard.css
@@ -14,15 +14,16 @@ body {
     padding: 16px;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 191.667px;
-    height: 282.052px;
-    background-color: rgba(24, 24, 24, 255);
-    font-family: var(--font-family, CircularSp, CircularSp-Arab, CircularSp-Hebr, CircularSp-Cyrl, CircularSp-Grek, CircularSp-Deva, var(--fallback-fonts, sans-serif));;
+    width: 165px;
+    height: 255px;
+    background-color: rgb(26, 26, 26);
+    font-family: var(--font-family, CircularSp, CircularSp-Arab, CircularSp-Hebr, CircularSp-Cyrl, CircularSp-Grek, CircularSp-Deva, var(--fallback-fonts, sans-serif));
+    ;
     transition: background-color 300ms;
-    cursor:pointer;
+    cursor: pointer;
 }
 
-.cardHomePage:hover{
+.cardHomePage:hover {
     background-color: rgb(48, 48, 48);
 }
 
@@ -32,32 +33,32 @@ body {
 }
 
 .cardConteiner {
-    width: 191.667px;
+    width: inherit;
     height: 191.667px;
-    margin-bottom: 16px;
+
 }
 
 .onlyPadding {
-    width: 191.667px;
+    width: 100%;
     height: 0;
     padding-bottom: 191.667px;
 }
 
 .onlyWidth {
-    width: 191.667px;
+    width: 100%;
     height: 0;
     position: relative;
-    
+
 }
 
 .imgModule {
-    width: 191.667px;
-    height: 191.667px;
+    width: 100%;
+    height: 165px;
     border-radius: 7px;
     z-index: 1;
 }
 
-.playHomePageCard{
+.playHomePageCard {
     border: 0;
     padding: 0;
     border-radius: 100%;
@@ -66,20 +67,20 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color:#1db954;
+    background-color: #1db954;
     position: absolute;
     z-index: 2;
     left: 70%;
     top: 134px;
-    opacity:0;
+    opacity: 0;
     transition: ease-in-out 300ms;
     cursor: pointer;
-    
+
 }
 
-.playHomePageCard:hover{
+.playHomePageCard:hover {
     opacity: 1;
-    
+
 }
 
 
@@ -91,28 +92,35 @@ body {
 }
 
 .titleCardConteiner {
+
     width: 120.385px;
     height: 29.594px;
 }
 
 .TCC2 {
-    width: 120.385px;
+    width: 140.385px;
     height: 29.594px;
-    padding-bottom: 4px;
+
 }
 
-.TCC2 p{
+.TCC2 p {
     color: rgba(252, 252, 252, 255);
-    font-size: 16px;
+    font-size: 15px;
     font-weight: 600;
 }
 
 .descriptionCard {
-    width: 191.667px;
-    height: 44.792px;
+    width: 165px;
+    height: 43px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
-.descriptionCard p{
+.descriptionCard p {
     color: rgba(155, 155, 155, 255);
-    font-size: 14px;
+    font-size: 13px;
+    overflow: hidden; 
+    text-overflow: ellipsis;
+    line-height: 1.5;
+    height: 43px;
 }
