--- a/components/homepage/homePage.css
+++ b/components/homepage/homePage.css
@@ -1,6 +1,13 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 html,
 body {
     height: 100%;
+    width: 100%;
+
 }
 
 .homePage {
@@ -12,12 +19,12 @@ body {
     flex-direction: column;
     min-height: 600px;
     min-width: 800px;
-
+    overflow-x: hidden;
     font-family: var(--font-family, CircularSp, CircularSp-Arab, CircularSp-Hebr, CircularSp-Cyrl, CircularSp-Grek, CircularSp-Deva, var(--fallback-fonts, sans-serif));
 }
 
 .totalBody {
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     min-height: inherit;
     min-width: inherit;
@@ -31,16 +38,16 @@ body {
     min-width: inherit;
     display: grid;
     padding: 8px;
+    padding-right: 16px;
     background-color: black;
     grid-template-columns: 344px auto;
-    grid-template-rows: 64px auto 92.385px;
-    ;
+    
     gap: 8px;
 }
 
 
 .navAside {
-    width: 344px;
+    width: auto;
     height: 100%;
     max-height: 100%;
     min-height: 483.615px;
@@ -64,9 +71,8 @@ body {
 
 .cookieMessage {
     width: 100%;
-    height: 92.385px;
+    height: auto;
     order: 4;
-    background-color: blueviolet;
     grid-row-start: 3;
     grid-column-start: 1;
     grid-row-end: 4;
@@ -88,17 +94,19 @@ body {
     color: white;
     font-size: 38px;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .sectorPS {
     width: 100%;
-    height: 300px;
     padding-top: 8px;
     padding-left: 16px;
     padding-right: 16px;
-    margin-bottom: 16px;
     display: flex;
     flex-wrap: wrap;
+    overflow-x: hidden;
+   flex: 1 1 50%;
+
 }
 
 .containerPS {
@@ -156,9 +164,8 @@ body {
     display: grid;
     grid-template-rows: auto;
     grid-template-columns: auto auto auto auto auto;
-    overflow: hidden;
     width: 100%;
-    height: 235.719px;
+    height: auto;
 }
 
 .containerFooter {
@@ -376,4 +383,22 @@ hr {
     width: 121.208px;
     height: 53px;
     font-size: 16px;
+}
+
+@media screen and (max-width: 1350px) {
+    .containerCARD :nth-child(5) {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 1125px) {
+    .containerCARD :nth-child(4) {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 910px) {
+    .containerCARD :nth-child(3) {
+        display: none;
+    }
 }
