--- a/components/search-card/index.html
+++ b/components/search-card/index.html
@@ -7,20 +7,457 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="header">
-      <div class="header-content">
-        <button>destra</button>
-        <button>sinistra</button>
-        <input type="search" name="" id="" />
+    <div class="body-search">
+      <div class="search-card">
+        <div class="content">
+          <div class="sfoglia">Sfoglia tutto</div>
+          <div class="cards-space">
+            <div class="card">
+              <div class="title">Podcast</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/567158eb895ad26718a814345af0fc43ee785ec5"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(30, 50, 100)">
+              <div class="title">Solo per te</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/images/ea364e99656e46a096ea1df50f581efe"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(141, 103, 171)">
+              <div class="title">Classifiche</div>
+              <img
+                class=".img"
+                src="https://charts-images.scdn.co/assets/locale_en/regional/weekly/region_global_default.jpg"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(232, 17, 91)">
+              <div class="title">Nuove uscite</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/ab67706f000000027ea4d505212b9de1f72c5112"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(141, 103, 171)">
+              <div class="title">Scopri</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/images/d0fb2ab104dc4846bdc56d72b0b0d785.jpeg"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(115, 88, 255)">
+              <div class="title">Eventi dal vivo</div>
+              <img
+                class=".img"
+                src="https://concerts.spotifycdn.com/images/live-events_category-image.jpg"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(180, 155, 200)">
+              <div class="title">Nuove uscite</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/567158eb895ad26718a814345af0fc43ee785ec5"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(240, 55, 165)">
+              <div class="title">Estate</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/images/8e508d7eb5b843a89c368c9507ecc429.jpeg"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(156, 240, 225)">
+              <div class="title">Pop</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/media/derived/pop-274x274_447148649685019f5e2a03a39e78ba52_0_0_274_274.jpg"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(215, 242, 125)">
+              <div class="title">Hip Hop</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/media/original/hip-274_0a661854d61e29eace5fe63f73495e68_274x274.jpg"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(141, 103, 171)">
+              <div class="title">Mood</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/media/original/mood-274x274_976986a31ac8c49794cbdc7246fd5ad7_274x274.jpg"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(232, 17, 91)">
+              <div class="title">Gaming</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/ab67706f0000000221a2087747d946f16704b8af"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(115, 88, 255)">
+              <div class="title">Indie</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/media/original/mood-274x274_976986a31ac8c49794cbdc7246fd5ad7_274x274.jpg"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(175, 40, 150)">
+              <div class="title">Dance/Elettronica</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/media/original/mood-274x274_976986a31ac8c49794cbdc7246fd5ad7_274x274.jpg"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(225, 17, 139)">
+              <div class="title">Latina</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/images/6a48e36b373a4d879a9340076db03a7b"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(140, 25, 50)">
+              <div class="title">Autori</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/ab676d63000076a0c9657833d9c169782b961c9c"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(220, 20, 140)">
+              <div class="title">R&B</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/ab67706f000000023c5a4aaf5df054a9beeb3d82"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(20, 138, 8)">
+              <div class="title">EQUAL</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/ab67706f0000000284a1ec26f589f0d569805a07"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(235, 30, 50)">
+              <div class="title">Rock</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/media/derived/rock_9ce79e0a4ef901bbd10494f5b855d3cc_0_0_274_274.jpg"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(119, 119, 119)">
+              <div class="title">Allenamento</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/ab67706f000000029249b35f23fb596b6f006a15"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(13, 115, 236)">
+              <div class="title">RADAR</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/images/c6677aa51acf4121b66b9d1f231bd427.png"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(80, 155, 245)">
+              <div class="title">Relax</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/media/derived/chill-274x274_4c46374f007813dd10b37e8d8fd35b4b_0_0_274_274.jpg"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(30, 50, 100)">
+              <div class="title">In auto</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/images/57017d435c344bb28efba325b7c9e7c6.jpeg"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(186, 93, 7)">
+              <div class="title">Anni</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/images/4c8b58ab42b54296ad5379514d36edac"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(180, 155, 200)">
+              <div class="title">Pride</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/images/c5495b9f0f694ffcb39c9217d4ed4375"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(141, 103, 171)">
+              <div class="title">Bambini e famiglia</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/images/15a38c44c4484cc3a078aaab5bd4e828"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(40, 62, 163)">
+              <div class="title">Benessere</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/images/3710b68657574bc79df14bd74629e5ac"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(220, 20, 140)">
+              <div class="title">Soul</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/ab67706f000000026e1034ebd7b7c86546c6acca"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(40, 62, 163)">
+              <div class="title">Alternative</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/images/ee9451b3ed474c82b1da8f9b5eafc88f.jpeg"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(245, 155, 35)">
+              <div class="title">A casa</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/images/04da469dd7be4dab96659aa1fa9f0ac9.jpeg"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(30, 50, 100)">
+              <div class="title">Dormire</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/images/04da469dd7be4dab96659aa1fa9f0ac9.jpeg"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(13, 115, 236)">
+              <div class="title">Caraibi</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/ab67706f00000002a76a2ccb454ff0e1720a51a5"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(30, 50, 100)">
+              <div class="title">Jazz</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/images/568f37f1cab54136939d63bd1f59d40c"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(255, 70, 50)">
+              <div class="title">Sanremo 2022</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/images/568f37f1cab54136939d63bd1f59d40c"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(255, 200, 100)">
+              <div class="title">Folk & Acustica</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/images/7fe0f2c9c91f45a3b6bae49d298201a4.jpeg"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(80, 55, 80)">
+              <div class="title">Focus</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/ab67706f00000002e4eadd417a05b2546e866934"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(71, 125, 149)">
+              <div class="title">Strumentale</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/ab67706f000000028ed1a5002b96c2ea882541b2"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(255, 70, 50)">
+              <div class="title">Party</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/images/fada056dcfd54cd28faf80d62b7059c6.jpeg"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(175, 40, 150)">
+              <div class="title">Afro</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/ab67706f0000000293c88c83bcb12b0800281074"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(45, 70, 185)">
+              <div class="title">Viaggi</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/images/44cf5615d3244f289fcedefa96b85db9"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(141, 103, 171)">
+              <div class="title">Classica</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/ab67706f000000023e0130fcd5d106f1402b4707"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(20, 138, 8)">
+              <div class="title">League of Legends</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/ab67706f000000025f0ff9251e3cfe641160dc31"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(119, 119, 119)">
+              <div class="title">Metal</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/ab67706f0000000285704160b49125ac95099ec8"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(180, 155, 200)">
+              <div class="title">Tastemaker</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/images/b4182906bf244b4994805084c057e9ee.jpeg"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(230, 30, 50)">
+              <div class="title">Funk</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/ab67706f00000002f16913f0326b9d44bf78fc88"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(71, 125, 149)">
+              <div class="title">Punk</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/media/derived/punk-274x274_f3f1528ea7bbb60a625da13e3315a40b_0_0_274_274.jpg"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(71, 125, 149)">
+              <div class="title">Ambient</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/images/a45c0978c7784da8b83cadbca8b815d1"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(20, 138, 8)">
+              <div class="title">K-pop</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/ab67706f00000002978b9f4a4f40b430fd0d837e"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(30, 50, 100)">
+              <div class="title">Blues</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/ab67706f0000000285c3e89f02770deb7691451c"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(141, 103, 171)">
+              <div class="title">Country</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/images/a2e0ebe2ebed4566ba1d8236b869241f.jpeg"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(255, 100, 55)">
+              <div class="title">Frequency</div>
+              <img
+                class=".img"
+                src="https://t.scdn.co/images/cad629fb65a14de4beddb38510e27cb1"
+                alt="alt"
+              />
+            </div>
+            <div class="card" style="background-color: rgb(141, 103, 171)">
+              <div class="title">Arabo</div>
+              <img
+                class=".img"
+                src="https://i.scdn.co/image/ab67706f00000002d3f07aa10d05fb4baab12b94"
+                alt="alt"
+              />
+            </div>
+          </div>
+          <div class="footer">
+            <div class="list-container">
+              <ul class="lista">
+                <li>Azienda</li>
+                <li>Chi siamo</li>
+                <li>Oppurtunità di lavoro</li>
+                <li>For the Record</li>
+              </ul>
+              <ul class="lista">
+                <li>Community</li>
+                <li>Per artisti</li>
+                <li>Sviluppatori</li>
+                <li>Pubblicità</li>
+                <li>Investitori</li>
+                <li>Venditori</li>
+              </ul>
+              <ul class="lista">
+                <li>Link utili</li>
+                <li>Assistenza</li>
+                <li>App per cellulare gratuita</li>
+                <li>Diritti dei consumatori</li>
+              </ul>
+            </div>
+            <div class="social-icons"></div>
+          </div>
+          <hr />
+          <div class="footer-info">2023 Spotify AB</div>
+        </div>
       </div>
-      <div class="header-account">
-        <button class="button">Iscriviti</button>
-        <button class="button">Accedi</button>
-      </div>
-    </div>
-    <div class="searcCard">
-      <div class="sfoglia">Playlist spotify</div>
-      <div class="cards"></div>
     </div>
   </body>
 </html>
