--- a/components/homepage-card/homepageCard.css
+++ b/components/homepage-card/homepageCard.css
@@ -12,10 +12,10 @@ body {
     border-radius: 7px;
     margin: 10px;
     padding: 16px;
+    padding-bottom: 100px;
     flex-direction: row;
-    flex-wrap: wrap;
-    width: 165px;
-    height: 255px;
+    width: auto;
+    height: 100%;
     background-color: rgb(26, 26, 26);
     font-family: var(--font-family, CircularSp, CircularSp-Arab, CircularSp-Hebr, CircularSp-Cyrl, CircularSp-Grek, CircularSp-Deva, var(--fallback-fonts, sans-serif));
     ;
@@ -53,7 +53,7 @@ body {
 
 .imgModule {
     width: 100%;
-    height: 165px;
+    height: auto;
     border-radius: 7px;
     z-index: 1;
 }
@@ -119,7 +119,7 @@ body {
 .descriptionCard p {
     color: rgba(155, 155, 155, 255);
     font-size: 13px;
-    overflow: hidden; 
+    overflow: hidden;
     text-overflow: ellipsis;
     line-height: 1.5;
     height: 43px;
