--- a/components/side-navbar/index.css
+++ b/components/side-navbar/index.css
@@ -5,23 +5,22 @@
 }
 
 .side-navbar {
-  font-family: var(
-    --font-family,
-    CircularSp,
-    CircularSp-Arab,
-    CircularSp-Hebr,
-    CircularSp-Cyrl,
-    CircularSp-Grek,
-    CircularSp-Deva,
-    var(--fallback-fonts, sans-serif)
-  );
+  font-family: var(--font-family,
+      CircularSp,
+      CircularSp-Arab,
+      CircularSp-Hebr,
+      CircularSp-Cyrl,
+      CircularSp-Grek,
+      CircularSp-Deva,
+      var(--fallback-fonts, sans-serif));
 
   font-size: 16px;
   display: flex;
   flex-direction: column;
-  padding: 8px;
-  width: 360px;
-  height: 100vh;
+  padding: 0;
+  width: auto;
+  min-height: auto;
+  /*height: 100vh;*/
   background-color: black;
   display: flex;
   flex-direction: column;
@@ -36,6 +35,7 @@
   border-radius: 8px;
   background-color: #121212;
 }
+
 ul {
   padding: 8px;
   padding-left: 12px;
@@ -58,6 +58,7 @@ li {
 li:first-child {
   color: white;
 }
+
 li:hover {
   color: white;
 }
@@ -74,6 +75,21 @@ li:hover {
   color: #a7a7a7;
   padding-inline: 8px;
   padding-bottom: 8px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.side-header::-webkit-scrollbar {
+  width: 10px;
+}
+
+.side-header::-webkit-scrollbar-thumb {
+  background-color: rgb(100, 100, 100);
+
+}
+
+.side-header::-webkit-scrollbar-track {
+  background-color: transparent
 }
 
 .library {
@@ -81,6 +97,7 @@ li:hover {
   padding: 8px;
   padding-inline: 16px;
 }
+
 .library-content {
   display: flex;
   align-items: center;
@@ -88,10 +105,12 @@ li:hover {
   gap: 14px;
   height: 40px;
 }
+
 .library:hover {
   color: white;
 }
-.library > .svg-lib:hover {
+
+.library>.svg-lib:hover {
   fill: white;
 }
 
@@ -99,11 +118,13 @@ li:hover {
   align-items: center;
   margin-left: auto;
 }
+
 .functions {
   display: flex;
   flex-direction: column;
   gap: 16px;
 }
+
 .group {
   color: white;
   display: flex;
@@ -116,19 +137,23 @@ li:hover {
   border-radius: 8px;
   margin-block: 8px;
 }
+
 .group-p {
   display: flex;
   flex-direction: column;
   gap: 12px;
 }
+
 .p1 {
   margin-top: 4px;
   font-weight: 700;
 }
+
 .p2 {
   font-size: 13px;
   font-weight: 400;
 }
+
 .button {
   border: 0px;
   border-radius: 500px;
@@ -145,6 +170,7 @@ li:hover {
   flex-direction: column;
   margin-top: auto;
 }
+
 .footer-elements {
   font-size: 10px;
   color: #a7a7a7;
@@ -164,10 +190,12 @@ li:hover {
   display: flex;
   align-items: center;
 }
+
 .language {
   margin-bottom: 32px;
   padding-inline: 24px;
 }
+
 .button2 {
   border-radius: 500px;
   color: white;
