--- a/components/side-navbar/index.css
+++ b/components/side-navbar/index.css
@@ -20,12 +20,14 @@
   padding: 0;
   width: auto;
   min-height: auto;
-  /*height: 100vh;*/
+  overflow-y: hidden;
+    height: 100%;
   background-color: black;
   display: flex;
   flex-direction: column;
   gap: 8px;
   flex: 1;
+  border-radius: 8px;
 }
 
 .header,
